--- a/index.html
+++ b/index.html
@@ -985,9 +985,9 @@
                                     <div class="o-content">
                                         <hr class="c-deco-line  t-primary-color-line" />
                                         <div class="o-content__body">
-                                            <h3>Iteraction Design Foundation</h3>
+                                            <h3>Interaction Design Foundation</h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, justo eget porttitor mauris sit amet felis. Neque id cursus faucibus.
+                                                Learning from the masters expert and implementing in the projects to resolve problems of users.
                                             </p>
                                         </div>
                                     </div><!-- /o-content -->
@@ -999,7 +999,7 @@
                                         <div class="o-content__body">
                                             <h3>EMC2 - Data Mining</h3>
                                             <p>
-                                                Praesent dapibus dolor sit amet, justo eget porttitor mauris sit amet. Neque id cursus faucibus.
+                                                Finished the Certificates during the college days for the purpose of mining the data and information.
                                             </p>
                                         </div>
                                     </div><!-- /o-content -->
@@ -1011,7 +1011,7 @@
                                         <div class="o-content__body">
                                             <h3>Canon Workshops</h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet, justo eget porttitor mauris sit amet felis. Neque id cursus faucibus.
+                                                As a profesional photographer, I started my first workshop by Canon, learnt a lot and finished the certification.
                                             </p>
                                         </div>
                                     </div><!-- /o-content -->
