--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.
+                                                    Working as a UI UX designer, as a part of team guided my junior and done many POC for the comapany need. Done 2 projects for automation side, one for e commerce side, along with this lerning more knwoledge.
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
