--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Working as a UI UX designer, as a part of team guided my junior and done many POC for the comapany need. Done 2 projects for automation side, one for e commerce side, along with this lerning more knwoledge.
+                                                    Researched, Designed, and prototyped a more approachable and valuable experience for high profile clients as a core part of project team and helped a lot for the team with good solutions to complete the project as per deadline.
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -617,7 +617,7 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis.
+                                                    Brainstormed and crafted multi-platform(web & mobile) for various projects with an year of experience make myself as a challengeable and done the best UX research to my company, helping them to delivered a project with client satisfaction.
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -644,7 +644,7 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh.
+                                                    Started my career with Graphical part, slowly moves to UI & learnt, done few projects on mobile applications and web pages.
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
