--- a/index.html
+++ b/index.html
@@ -52,9 +52,13 @@
 
     <body>
 
-        <div class="c-preloader  js-preloader">
-            <div class="c-preloader__spinner  t-preloader__spinner"></div>
-        </div>
+            <div class="main js-preloader" id="">
+                    <div class="ball ball1">A</div>
+                    <div class="ball ball2">N</div>
+                    <div class="ball ball3">A</div>
+                    <div class="ball ball4">N</div>
+                    <div class="ball ball5">D</div>
+                </div>
 
         <div class="c-main-container  js-main-container">
 
@@ -243,6 +247,7 @@
                             <div class="o-content">
                                 <div class="c-intro">
                                     <div class="o-content__body">
+                                        <h3>I am focused on creating  meaningful <br>experience through design.</h3>
                                         <p>
                                             2+ years of experience in a in a User Experience and UI Design role for Software Products & Web Applications experience, I care about the details and consider the motion design of affordances to be crucial in creating effective, intuitive interfaces. I like prototyping - it helps me think through interaction models and new possibilities.
                                             <a href="#" target="_blank">Energetic UI UX Designer</a>, skilled in Adobe XD, Interaction and UX research. Have completed several projects, including design of an ecommerce webapp, mobile for Nissan Connected-Car,and improved UX for Aprisal App.
@@ -571,7 +576,7 @@
                             <div class="a-experience-timeline  c-timeline  t-border-color">
 
                                 <div class="c-timeline__item">
-                                    <div class="c-timeline__point  t-timeline__point  t-primary-bg"></div>
+                                    <div class="c-timeline__point  t-timeline__point  quadrado t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
@@ -817,7 +822,7 @@
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
-                                                        <i class="fab  fa-lg  fa-envira"></i>
+                                                            <i class="fab fa-lg fa-behance-square"></i>
                                                     </div>
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
@@ -861,7 +866,7 @@
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
-                                                        <i class="fab  fa-lg  fa-medium"></i>
+                                                            <i class="fab fa-lg fa-linkedin"></i>
                                                     </div>
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
@@ -905,7 +910,7 @@
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
-                                                        <i class="fab  fa-lg  fa-flickr"></i>
+                                                            <i class="fab fa-lg fa-instagram"></i>
                                                     </div>
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
@@ -921,27 +926,6 @@
                                     </div><!-- /o-content -->
                                 </div><!-- /o-grid__col -->
 
-                                <div class="o-grid__col-xl-4  o-grid__col-sm-6">
-                                    <div class="o-content">
-                                        <a href="http://www.deviantart.com" target="_blank" class="t-link-container">
-                                            <div class="o-media  o-media--block">
-                                                <div class="o-media__figure">
-                                                    <div class="c-profile__icon">
-                                                        <i class="fab  fa-lg  fa-deviantart"></i>
-                                                    </div>
-                                                </div>
-                                                <div class="o-media__body  o-content__body">
-                                                    <h3 class="t-link-container__item">
-                                                        DeviantArt
-                                                    </h3>
-                                                    <p>
-                                                        A place for my sketches and drawings.
-                                                    </p>
-                                                </div>
-                                            </div><!-- /o-media -->
-                                        </a><!-- /t-link-container -->
-                                    </div><!-- /o-content -->
-                                </div><!-- /o-grid__col -->
 
                             </div><!-- /o-grid -->
 
@@ -1135,28 +1119,7 @@
 
                                         </div><!-- /c-footer__brand -->
 
-                                        <ul class="c-footer__social-buttons  c-social-buttons  o-content__body">
-                                            <li class="a-header">
-                                                <a href="https://www.facebook.com/aanandkarthikeyan" target="_blank" class="c-social-button  t-social-button">
-                                                    <i class="fab  fa-lg  fa-facebook-f"></i>
-                                                </a>
-                                            </li>
-                                            <li class="a-header">
-                                                <a href="https://www.instagram.com/ak.insta" target="_blank" class="c-social-button  t-social-button">
-                                                    <i class="fab  fa-lg  fa-instagram"></i>
-                                                </a>
-                                            </li>
-                                            <li class="a-header">
-                                                <a href="https://www.instagram.com/ak.insta" target="_blank" class="c-social-button  t-social-button">
-                                                    <i class="fab  fa-lg  fa-dribbble"></i>
-                                                </a>
-                                            </li>
-                                            <li class="a-header">
-                                                <a href="https://twitter.com/ak_2wter" target="_blank" class="c-social-button  t-social-button">
-                                                    <i class="fab fa-lg fa-linkedin"></i>
-                                                </a>
-                                            </li>
-                                        </ul><!-- /c-footer__social-buttons -->
+                                       
 
                                     </div><!-- /c-footer__bottom -->
                                 </div><!-- /o-content -->
@@ -1178,7 +1141,7 @@
                 strings: ['Designer', 'Photographer', 'Traveller' , 'Dreamer'],
                 typeSpeed: 0,
                 backSpeed: 0,
-                cursorChar: '_',
+                cursorChar: '|',
                 shuffle: true,
                 smartBackspace: false,
                 loop: true
