--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="http://themeforest.net/user/ruventhemes/portfolio" target="_blank" class="t-link-container">
+                                        <a href="https://www.behance.net/jaiganeshac588" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
@@ -840,16 +840,16 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="https://github.com/hatra-e/" target="_blank" class="t-link-container">
+                                        <a href="facebook.com/aanandkarthikeyan" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
-                                                        <i class="fab  fa-lg  fa-github-alt"></i>
+                                                        <i class="fab fa-lg fa-facebook"></i>
                                                     </div>
                                                 </div>
                                                 <div class="o-media__body  o-content__body">
                                                     <h3 class="t-link-container__item">
-                                                        GitHub
+                                                        Facebook
                                                     </h3>
                                                     <p>
                                                         All my open source projects for you analyze.
@@ -862,7 +862,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="http://wordpress.com" target="_blank" class="t-link-container">
+                                        <a href="https://www.linkedin.com/in/anand-karthikeyan-093a41a3/" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
@@ -906,7 +906,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="https://www.flickr.com" target="_blank" class="t-link-container">
+                                        <a href="instagram.com/ak.insta" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
