--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                             </div>
                                         </div>
                                         <div class="o-media__body  o-content__body">
-                                            <h3>Advanced CSS</h3>
+                                            <h3>User Research</h3>
                                             <p>
                                                 Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id.
                                             </p>
@@ -319,7 +319,7 @@
                                             </div>
                                         </div>
                                         <div class="o-media__body  o-content__body">
-                                            <h3>Front-end Design</h3>
+                                            <h3>Wireframes</h3>
                                             <p>
                                                 Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna. Ut aliquam sollicitudin leo.
                                             </p>
@@ -335,7 +335,7 @@
                                             </div>
                                         </div>
                                         <div class="o-media__body  o-content__body">
-                                            <h3>Ruby on Rails</h3>
+                                            <h3>User Interaction</h3>
                                             <p>
                                                 Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Vivamus vestibulum nulla cras ornare tristique elit nec ante.
                                             </p>
@@ -351,7 +351,7 @@
                                             </div>
                                         </div>
                                         <div class="o-media__body  o-content__body">
-                                            <h3>Object-oriented PHP</h3>
+                                            <h3>Design Iteration</h3>
                                             <p>
                                                 Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras ante. Vivamus vestibulum nulla nec ante.
                                             </p>
@@ -367,25 +367,9 @@
                                             </div>
                                         </div>
                                         <div class="o-media__body  o-content__body">
-                                            <h3>WordPress</h3>
+                                            <h3>User Interface Design</h3>
                                             <p>
                                                 Phasellus ultrices nulla quis nibh. Fusce lobortis lorem. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, sodales sit amet, nisi.
-                                            </p>
-                                        </div>
-                                    </div><!-- /o-media o-content -->
-                                </div><!-- /o-grid__col -->
-
-                                <div class="o-grid__col-sm-6">
-                                    <div class="o-media  o-media--block  o-content">
-                                        <div class="o-media__figure">
-                                            <div class="c-number  t-primary-color">
-                                                06
-                                            </div>
-                                        </div>
-                                        <div class="o-media__body  o-content__body">
-                                            <h3>JavaScript / jQuery</h3>
-                                            <p>
-                                                Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id.
                                             </p>
                                         </div>
                                     </div><!-- /o-media o-content -->
