--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                                     <div class="o-content__body">
                                                         <h4>Location</h4>
                                                         <address>
-                                                            Coimbatore, India
+                                                            Bangalore, India
                                                         </address>
                                                     </div>
                                                 </div><!-- /o-content -->
@@ -802,7 +802,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="https://www.behance.net/jaiganeshac588" target="_blank" class="t-link-container">
+                                        <a href="https://www.behance.net/aanandkarthikeyan" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
@@ -824,7 +824,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="facebook.com/aanandkarthikeyan" target="_blank" class="t-link-container">
+                                        <a href="https://www.facebook.com/aanandkarthikeyan" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
@@ -890,7 +890,7 @@
 
                                 <div class="o-grid__col-xl-4  o-grid__col-sm-6">
                                     <div class="o-content">
-                                        <a href="instagram.com/ak.insta" target="_blank" class="t-link-container">
+                                        <a href="https://www.instagram.com/ak.insta/" target="_blank" class="t-link-container">
                                             <div class="o-media  o-media--block">
                                                 <div class="o-media__figure">
                                                     <div class="c-profile__icon">
@@ -1196,7 +1196,7 @@
                                             <div class="o-content__body">
                                                 <h4>Location</h4>
                                                 <address>
-                                                    Coimbatore, India
+                                                    Bangalore, India
                                                 </address>
                                             </div>
                                         </div><!-- /o-content -->
