--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>User Research</h3>
                                             <p>
-                                                Cras ornare tristique elit lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id.
+                                                Researching a lot through the product, gathering the pain point of user and makes persona and information architecture of the products. Giving a valuable solutions and ideas to the products makes user as best experience.
                                             </p>
                                         </div>
                                     </div><!-- /o-media o-content -->
@@ -321,7 +321,7 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>Wireframes</h3>
                                             <p>
-                                                Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euismod vel, velit. Pellentesque egestas sem. Suspendisse commodo ullamcorper magna. Ut aliquam sollicitudin leo.
+                                                Wireframes makes a perfect look of the product that engage and define the product how it works and how it visually looks in black and white format through out for the projects.
                                             </p>
                                         </div>
                                     </div><!-- /o-media o-content -->
@@ -337,7 +337,7 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>User Interaction</h3>
                                             <p>
-                                                Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis. Vivamus vestibulum nulla cras ornare tristique elit nec ante.
+                                                Interaction is nothing but visually work experience without coding how it switching to one page to other page using clickable. For this I’ll use more like Invision app, Adobe XD.
                                             </p>
                                         </div>
                                     </div><!-- /o-media o-content -->
@@ -353,7 +353,7 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>Design Iteration</h3>
                                             <p>
-                                                Morbi in sem quis dui placerat ornare. Ut aliquam sollicitudin leo. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras ante. Vivamus vestibulum nulla nec ante.
+                                                The main part of all what I am doing, iteration will make better product always when you done Wireframes and ideas makes local users or client to work with that whether they can easily access or need to be more understandable according I’ll change.
                                             </p>
                                         </div>
                                     </div><!-- /o-media o-content -->
@@ -369,7 +369,7 @@
                                         <div class="o-media__body  o-content__body">
                                             <h3>User Interface Design</h3>
                                             <p>
-                                                Phasellus ultrices nulla quis nibh. Fusce lobortis lorem. Quisque a lectus. Donec consectetuer ligula vulputate sem tristique cursus. Nam nulla quam, gravida non, sodales sit amet, nisi.
+                                                Apart from all the main attraction is visual design or User interface design which makes the product more wow fully and attractive with blindness Colors and fonts to read properly for the users.
                                             </p>
                                         </div>
                                     </div><!-- /o-media o-content -->
