--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                                                 </div>
                                                 <div class="o-grid__col-md-7">
                                                     <p>
-                                                        Consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh.
+                                                        Kumaraguru College of Technology (KCT), Coimbatore is a private Engineering College started in 1984 under the auspices of Ramanandha Adigalar Foundation, a charitable educational trust of Sakthi Group.
                                                     </p>
                                                 </div>
                                             </div><!-- /o-grid -->
@@ -727,7 +727,7 @@
                                                 </div>
                                                 <div class="o-grid__col-md-7">
                                                     <p>
-                                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero.
+                                                        Ponnaiyah Ramajayam Institute of Science and Technology popularly known as PRIST University. It was established in 1985 and situated in the state of Tamil Nadu and in the city of Thanjavur. It is a deemed to be university which is approved by University Grants Commission (UGC) and accredited by National Assessment and Accreditation Council (NAAC).
                                                     </p>
                                                 </div>
                                             </div><!-- /o-grid -->
@@ -754,7 +754,8 @@
                                                 </div>
                                                 <div class="o-grid__col-md-7">
                                                     <p>
-                                                        Fusce lacinia arcu et nulla. Nulla vitae mauris non felis mollis faucibus. Phasellus hendrerit. Pellentesque aaliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales.
+                                                        A wise man has more power; man of knowledge increases his strength"
+Very immense pleasure to share the path of victories of noble children in Maxwell school Thanjavur since 1986. In the 33rd year of our school history students excelled in curricular and co- curricular activities, secured STATE RANKS in 10th Public exam, District Rank in H.Sc., Public exams for many years with 100% results. 
                                                     </p>
                                                 </div>
                                             </div><!-- /o-grid -->
