--- a/index.html
+++ b/index.html
@@ -986,6 +986,18 @@ Very immense pleasure to share the path of victories of noble children in Maxwel
                                     </div><!-- /o-content -->
                                 </div><!-- /o-grid__col -->
 
+                                <div class="o-grid__col-md-4  o-grid__col-sm-6">
+                                    <div class="o-content">
+                                        <hr class="c-deco-line  t-primary-color-line" />
+                                        <div class="o-content__body">
+                                            <h3>Employee Of The Month</h3>
+                                            <p>
+                                                <img src="assets/images/anand.jpeg" alt="">
+                                            </p>
+                                        </div>
+                                    </div><!-- /o-content -->
+                                </div><!-- /o-grid__col -->
+
                             </div><!-- /o-grid -->
 
                         </div><!-- /o-section__content -->
