--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@ Very immense pleasure to share the path of victories of noble children in Maxwel
                                         Interaction UI
                                     </h2>
                                     <div class="o-content__body  o-section__description">
-                                        getting some jealous
+                                        Getting Jealous?
                                     </div>
                                 </div>
                             </header><!-- /o-section__header -->
@@ -1192,7 +1192,7 @@ Very immense pleasure to share the path of victories of noble children in Maxwel
                                     Contact
                                 </h2>
                                 <div class="o-content__body  o-section__description">
-                                    Call me, maybe.
+                                    Call me, if you liked.
                                 </div>
                             </div>
                         </header><!-- /o-section__header -->
