--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@ Very immense pleasure to share the path of victories of noble children in Maxwel
         <script>
             $(function(){  
                 $("#typed6").typed({
-                strings: ['Designer', 'Photographer', 'Traveller' , 'Dreamer'],
+                strings: ['UI/UX Designer', 'Photographer', 'Traveller' , 'Dreamer'],
                 typeSpeed: 0,
                 backSpeed: 0,
                 cursorChar: '|',
