--- a/index.html
+++ b/index.html
@@ -565,7 +565,34 @@
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
                                                 <div class="c-work__timeframe">
-                                                    2019 &ndash; Present
+                                                    Nov 2019 &ndash; Present
+                                                </div>
+                                                <h3 class="c-work__heading">
+                                                    Cartoon Mango
+                                                </h3>
+                                                <h4 class="c-work__title">
+                                                    UI / UX Designer
+                                                </h4>
+                                                <div class="c-work__location">
+                                                    Bangalore, Karnataka.
+                                                </div>
+                                            </div>
+                                            <div class="o-grid__col-md-7">
+                                                <p>
+                                                    Researched, Designed, and prototyped a more approachable and valuable experience for high profile clients as a core part of project team and helped a lot for the team with good solutions to complete the project as per deadline.
+                                                </p>
+                                            </div>
+                                        </div><!-- /o-grid -->
+                                    </div><!-- /o-content -->
+                                </div><!-- /c-timeline__item -->
+
+                                <div class="c-timeline__item">
+                                    <div class="c-timeline__point  t-timeline__point  quadrado t-primary-bg"></div>
+                                    <div class="o-content">
+                                        <div class="o-grid">
+                                            <div class="o-grid__col-md-5">
+                                                <div class="c-work__timeframe">
+                                                    Mar 2019 &ndash; Oct 2019
                                                 </div>
                                                 <h3 class="c-work__heading">
                                                     GoProtoz Design
