--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                                 </div><!-- /c-timeline__item -->
 
                                 <div class="c-timeline__item">
-                                    <div class="c-timeline__point  t-timeline__point  quadrado t-primary-bg"></div>
+                                    <div class="c-timeline__point  t-timeline__point t-primary-bg"></div>
                                     <div class="o-content">
                                         <div class="o-grid">
                                             <div class="o-grid__col-md-5">
