--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                                             </div>
                                             <div class="o-grid__col-md-7">
                                                 <p>
-                                                    Researched, Designed, and prototyped a more approachable and valuable experience for high profile clients as a core part of project team and helped a lot for the team with good solutions to complete the project as per deadline.
+                                                    Using the design skills and technical knowledge to improve the way that existing products work and look. Understanding the technology, production methods and materials, and be able to meet deadlines and work within budgets.
                                                 </p>
                                             </div>
                                         </div><!-- /o-grid -->
@@ -901,6 +901,18 @@
                                             <h3>Employee Of The Month</h3>
                                             <p>
                                                 <img src="assets/images/anand.jpeg" alt="">
+                                            </p>
+                                        </div>
+                                    </div><!-- /o-content -->
+                                </div><!-- /o-grid__col -->
+
+                                <div class="o-grid__col-md-4  o-grid__col-sm-6">
+                                    <div class="o-content">
+                                        <hr class="c-deco-line  t-primary-color-line" />
+                                        <div class="o-content__body">
+                                            <h3>Human Computer Interaction</h3>
+                                            <p>
+                                                <img src="assets/images/course.jpeg" alt="">
                                             </p>
                                         </div>
                                     </div><!-- /o-content -->
