--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                                         <div class="o-content__body">
                                             <h3>Human Computer Interaction</h3>
                                             <p>
-                                                <img src="assets/images/course.jpeg" alt="">
+                                                <img src="assets/images/course.jpg" alt="">
                                             </p>
                                         </div>
                                     </div><!-- /o-content -->
