--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
                                             <div class="o-grid__col-md-3  o-grid__col-sm-6">
                                                 <div class="a-header  o-content">
                                                     <div class="o-content__body">
-                                                        <a href="#" target="_blank" class="t-link-container">
+                                                        <a href="http://www.mkbstudios.in/" target="_blank" class="t-link-container">
                                                             <h4>Web</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    instagram.com/ak.insta
+                                                                    mkbstudios.in
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
