--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
     <body>
 
             <div class="main js-preloader" id="">
-                    <div class="ball ball1">A</div>
-                    <div class="ball ball2">N</div>
-                    <div class="ball ball3">A</div>
-                    <div class="ball ball4">N</div>
-                    <div class="ball ball5">D</div>
+                <div class="loader loader-1">
+                    <div class="loader-outter"></div>
+                    <div class="loader-inner"></div>
+                  </div>
                 </div>
 
         <div class="c-main-container  js-main-container">
@@ -217,7 +216,7 @@
                 </div><!-- /c-header -->
             </section><!-- /o-section -->
 
-
+            <a href="case-study.html" class="started_btn" >Get Started</a>
 
             <!-- ################################ -->
             <!-- ############ INTRO ############# -->
