--- a/case-study-details.html
+++ b/case-study-details.html
@@ -52,13 +52,12 @@
 
     <body>
 
-            <div class="main js-preloader" id="">
-                    <div class="ball ball1">A</div>
-                    <div class="ball ball2">N</div>
-                    <div class="ball ball3">A</div>
-                    <div class="ball ball4">N</div>
-                    <div class="ball ball5">D</div>
-                </div>
+        <div class="main js-preloader" id="">
+            <div class="loader loader-1">
+                <div class="loader-outter"></div>
+                <div class="loader-inner"></div>
+              </div>
+            </div>
 
         <div class="c-main-container  js-main-container">
 
