font sixe chaneges

--- a/case-study.html
+++ b/case-study.html
@@ -71,12 +71,12 @@
             <!-- ########### GRADIENT BANNER ########### -->
             <!-- ################################ -->
             
-            <section class="o-section  t-section case_study">
+            <section class="o-section  t-section case_study case-study-banner">
 
                 <div class="o-section__header-bg  t-section__header"></div>
                 <div class="o-section__content-bg  t-section__content"></div>
 
-                <div class="o-container">
+                <div class="o-container  w-100">
                     <div class="o-section__container">
                         <header class="o-section__header  t-section__header">
                             <div class="o-content">
