--- a/case-study-details.html
+++ b/case-study-details.html
@@ -79,7 +79,7 @@
                             <div class="case-study-wrapper">
                                 <div class="left-content">
                                     <h6>Case Study 2</h6>
-                                    <h2>Design Process</h2>
+                                    <h2 class="t-title">Design Process</h2>
                                     <h6>Summary</h6>
                                     <h4>Reach your business goals with excellent user experience. Let’s start working on your awesome web or iOS app.Reach your business goals with excellent user experience. Let’s start working on your awesome web or iOS app.</h4>
                                 </div>
