--- a/case-study-details.html
+++ b/case-study-details.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <title>AK Resume</title>
+        <title>AK Resume - Case Study Detail</title>
 
         <meta name="description" content="">
 
