--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
             <!-- ############ CERTIFICATES ############ -->
             <!-- ################################ -->
             
-            <section class="o-section  t-section  ">
+            <section class="o-section  t-section" style="padding-top: 50px;" >
 
                 <div class="o-section__header-bg  t-section__header"></div>
                 <div class="o-section__content-bg  t-section__content"></div>
@@ -936,7 +936,7 @@
                 <div class="o-container">
                     <div class="o-section__container">
 
-                        <header class="o-section__header  t-section__header">
+                        <!-- <header class="o-section__header  t-section__header">
                             <div class="o-content">
                                 <h2 class="o-section__heading">
                                     UX Case Studies
@@ -945,15 +945,17 @@
                                     Wondering how?
                                 </div>
                             </div>
-                        </header><!-- /o-section__header -->
+                        </header> -->
 
-                        <div class="o-section__content  t-section__content separtor_line ">
-                            <div class="o-content">
+                        <div class="o-section__content1 t-section__content separtor_line " style="width: 100%;">
+                            <div class="o-content text-center">
                                 <div class="c-intr1o">
-                                    <img src="assets/images/new.jpeg" alt="" style="height: 164px;" class="case_study_img">
+                                    <h2 class="o-section__heading main-heading">
+                                        <span class="gradient_one">Case</span><span class="gradient_two"> Study</span>
+                                     </h2>
 
                                     <div class="o-content__body mt-50">
-                                        <p><span style="color:#fff">Ask first.</span> Before jumping into designing I always make sure that we’re asking the right questions and trying to accomplish the right challenges. This stage includes market research, competitive analyses, consulting and exploring possible solutions.</p>
+                                        <p><span style="color:#fff">Ask first.</span> Before jumping into designing I always make sure that we’re asking<br> the right questions and trying to accomplish the right challenges. This stage includes<br> market research, competitive analyses, consulting and exploring possible solutions.</p>
                                         <a href="case-study.html" class="started_btn" >View All</a>
                                     </div>
                                 </div>
