--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
             <!-- ############ CERTIFICATES ############ -->
             <!-- ################################ -->
             
-            <section class="o-section  t-section" style="padding-top: 50px;" >
+            <section class="o-section  t-section"  >
 
                 <div class="o-section__header-bg  t-section__header"></div>
                 <div class="o-section__content-bg  t-section__content"></div>
@@ -947,10 +947,10 @@
                             </div>
                         </header> -->
 
-                        <div class="o-section__content1 t-section__content separtor_line " style="width: 100%;">
+                        <div class="o-section__content1 t-section__content separtor_line " style="width: 100%;padding-top: 50px;">
                             <div class="o-content text-center">
                                 <div class="c-intr1o">
-                                    <h2 class="o-section__heading main-heading">
+                                    <h2 class="o-section__heading main-heading" style="font-size: 40px;">
                                         <span class="gradient_one">Case</span><span class="gradient_two"> Study</span>
                                      </h2>
 
