--- a/index.html
+++ b/index.html
@@ -950,11 +950,11 @@
                         <div class="o-section__content1 t-section__content separtor_line " style="width: 100%;padding-top: 50px;">
                             <div class="o-content text-center">
                                 <div class="c-intr1o">
-                                    <h2 class="o-section__heading main-heading" style="font-size: 40px;">
+                                    <h2 class="o-section__heading main-heading index_heading">
                                         <span class="gradient_one">Case</span><span class="gradient_two"> Study</span>
                                      </h2>
 
-                                    <div class="o-content__body mt-50">
+                                    <div class="o-content__body">
                                         <p><span style="color:#fff">Ask first.</span> Before jumping into designing I always make sure that we’re asking<br> the right questions and trying to accomplish the right challenges. This stage includes<br> market research, competitive analyses, consulting and exploring possible solutions.</p>
                                         <a href="case-study.html" class="started_btn" >View All</a>
                                     </div>
