--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
             <!-- ########### EDUCATION ########## -->
             <!-- ################################ -->
             
-            <section class="o-section  t-section  ">
+            <section class="o-section  t-section line_section ">
 
                 <div class="o-section__header-bg  t-section__header"></div>
                 <div class="o-section__content-bg  t-section__content"></div>
@@ -1311,7 +1311,7 @@
                                                         Thanjavur, Tamil Nadu.
                                                     </div>
                                                 </div>
-                                                <div class="o-grid__col-md-7">
+                                                <div class="o-grid__col-md-7 last_grid">
                                                     <p>
                                                         A wise man has more power; man of knowledge increases his strength"
 Very immense pleasure to share the path of victories of noble children in Maxwell school Thanjavur since 1986. In the 33rd year of our school history students excelled in curricular and co- curricular activities, secured STATE RANKS in 10th Public exam, District Rank in H.Sc., Public exams for many years with 100% results. 
