--- a/case-study.html
+++ b/case-study.html
@@ -228,7 +228,7 @@
                         <header class="o-section__header  t-section__header">
                             <div class="o-content">
                                 <h2 class="o-section__heading design_title">
-                                    My Soluions
+                                    My Solutions
                                 </h2>
                                 <div class="o-content__body  o-section__description bold_title">
                                     Case Study & Works
@@ -255,7 +255,7 @@
 
                         <div class="o-section__content  t-section__content  p-0">
                           <a href="case-study-details.html">
-                            <img src="assets/images/new.jpeg" alt="" class="case_study_img">
+                            <img src="assets/images/case-study-0.png" alt="" class="case_study_img">
                         </a>  
                         </div><!-- /o-section__content -->
 
@@ -291,7 +291,7 @@
 
                         <div class="o-section__content  t-section__content  p-0">
                           <a href="case-study-details.html">
-                            <img src="assets/images/new.jpeg" alt="" class="case_study_img">
+                            <img src="assets/images/case-study-1.png" alt="" class="case_study_img">
                         </a>  
                         </div><!-- /o-section__content -->
 
@@ -329,7 +329,7 @@
 
                         <div class="o-section__content  t-section__content  p-0">
                           <a href="case-study-details.html">
-                            <img src="assets/images/new.jpeg" alt="" class="case_study_img">
+                            <img src="assets/images/case-study-2.png" alt="" class="case_study_img">
                         </a>  
                         </div><!-- /o-section__content -->
 
@@ -365,7 +365,79 @@
 
                         <div class="o-section__content  t-section__content  p-0">
                           <a href="case-study-details.html">
-                            <img src="assets/images/new.jpeg" alt="" class="case_study_img">
+                            <img src="assets/images/case-study-3.png" alt="" class="case_study_img">
+                        </a>  
+                        </div><!-- /o-section__content -->
+
+                    </div><!-- /o-section__container -->
+                </div><!-- /o-container -->
+
+            </section><!-- /o-section -->
+
+
+
+            <!-- ################################ -->
+            <!-- ########### CASE STUDY ########### -->
+            <!-- ################################ -->
+            <section class=" t-section"> </section>
+            <section class="o-section  t-section case_study case_study_list">
+
+                <div class="o-section__header-bg  t-section__header"></div>
+                <div class="o-section__content-bg  t-section__content"></div>
+
+                <div class="o-container ">
+                    <div class="o-section__container align-center">
+
+                        <header class="o-section__header  t-section__header">
+                            <div class="o-content">
+                                <h2 class="o-section__heading">
+                                  <span class="gradient_three">Startegy</span>  
+                                </h2>
+                                <div class="o-content__body  o-section__description">
+                                    <span>Ask first.</span> Before jumping into designing I always make sure that we’re asking the right questions and trying to accomplish the right challenges. This stage includes market research, competitive analyses, consulting and exploring possible solutions.
+                                </div>
+                            </div>
+                        </header><!-- /o-section__header -->
+
+                        <div class="o-section__content  t-section__content  p-0">
+                          <a href="case-study-details.html">
+                            <img src="assets/images/case-study-4.png" alt="" class="case_study_img">
+                        </a>  
+                        </div><!-- /o-section__content -->
+
+                    </div><!-- /o-section__container -->
+                </div><!-- /o-container -->
+
+            </section><!-- /o-section -->
+
+
+
+            <!-- ################################ -->
+            <!-- ########### CASE STUDY ########### -->
+            <!-- ################################ -->
+            <section class=" t-section"> </section>
+            <section class="o-section  t-section case_study case_study_list">
+
+                <div class="o-section__header-bg  t-section__header"></div>
+                <div class="o-section__content-bg  t-section__content"></div>
+
+                <div class="o-container ">
+                    <div class="o-section__container align-center">
+
+                        <header class="o-section__header  t-section__header">
+                            <div class="o-content">
+                                <h2 class="o-section__heading">
+                                  <span class="gradient_three">Startegy</span>  
+                                </h2>
+                                <div class="o-content__body  o-section__description">
+                                    <span>Ask first.</span> Before jumping into designing I always make sure that we’re asking the right questions and trying to accomplish the right challenges. This stage includes market research, competitive analyses, consulting and exploring possible solutions.
+                                </div>
+                            </div>
+                        </header><!-- /o-section__header -->
+
+                        <div class="o-section__content  t-section__content  p-0">
+                          <a href="case-study-details.html">
+                            <img src="assets/images/case-study-5.png" alt="" class="case_study_img">
                         </a>  
                         </div><!-- /o-section__content -->
 
